# pass4thewin

./: .gitignore  Cargo.toml  license.txt  readme.md
.github/workflows/: ci.yml
src/: clipboard.rs  constants.rs  decrypt.rs  encrypt.rs  main.rs  notification.rs  old_main.rs  password.rs  qrcode.rs  settings.rs  sync.rs
src/cmd/: copy.rs  edit.rs  find.rs  generate.rs  init.rs  insert.rs  list.rs  m0ve.rs  mod.rs  otp.rs  remove.rs  show.rs
src/cmd/git/: mod.rs
src/utils/: clipboard.rs  crypto.rs  mod.rs  notification.rs  qrcode.rs  sync.rs  tree.rs
tests/: secret-key.asc
