[package]
name = "pass4thewin"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"

[dependencies]
clipboard-win = "4.0.3"
qr2term = "0.2.1"
git2 = "0.13.12"
anyhow = "1.0.34"
rpassword = "5.0"
sequoia-openpgp = { version = "0.20.0", default-features = false, features = ["crypto-cng"] }
structopt = "0.3"
directories-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.7"
dunce = "1.0.1"
dialoguer = "0.7.1"

[dev-dependencies]
tempfile = "3"