[package]
name = "pass4thewin"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"

[dependencies]
clipboard-win = "4.0.3"
qr2term = "0.2.2"
git2 = "0.13.17"
anyhow = "1.0.38"
rpassword = "5.0.1"
sequoia-openpgp = { version = "0.20.0", default-features = false, features = ["crypto-cng"] }
structopt = "0.3.21"
directories-next = "2.0.0"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
dunce = "1.0.1"
dialoguer = "0.7.1"
passwords = "3.1.3"
edit = "0.1.2"
fs_extra = "1.2.0"
totp-rs = "0.6.3"
base32 = "0.4.0"
url = "2.2.0"

[dev-dependencies]
tempfile = "3.2.0"
